# yata

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py  urls.py
todos/: forms.py  urls.py  views.py
todos/migrations/: 0001_initial.py
todos/templates/todos/: action_add_new_todo.html  index.html  partial_nothing_to_see.html  partial_todo_item.html
todos/tests/: conftest.py  test_todos.py
yata/: settings.py
