[project]
name = "yata"
version = "0.1.0"
description = "Yet Another TODO App (Tutorial)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-crispy-forms>=2.4",
]

[dependency-groups]
dev = ["pytest-django>=4.11.1", "pytest-env>=1.1.5", "pytest-playwright>=0.7.0"]
